refactor: change ID fields from Long to String across multiple entities and repositories